Bug 164304 - crash in multicolumn mode
Summary: crash in multicolumn mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (show other bugs)
Version: 16.12.2
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 164306 165347 166211 166660 167150 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-17 16:09 UTC by Maciej Pilichowski
Modified: 2008-07-24 21:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2008-06-17 16:09:55 UTC
Version:            (using KDE 4.0.82)

crash in multicolumn mode

Not easy to reprocude, but doable.

Steps:
a) multicolumn
b) preview on
c) rich directory structure
d) navigation path (not edit)
e) open several columns (dirA->dirB->dirC...)
f) close them by clicking in location dirA or dirB
g) repeat e-f till crash

ad.f) it is probably good to open so many columns that window will not get scrollbars yet, and then click on the latest-2 part

Application: Dolphin (dolphin), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb5fa69a0 (LWP 4749)]
[KCrash handler]
#6  0x07868640 in ?? ()
#7  0xb7ecdc94 in QObject::disconnect ()
   from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#8  0xb7468c15 in DolphinController::setItemView (this=0x85408c8, 
    view=0x85b9090)
    at /home/kde4daily/src/kdebase/apps/dolphin/src/dolphincontroller.cpp:54
#9  0xb7473c98 in DolphinColumnWidget::slotEntered (this=0x85b9090, 
    index=@0x858e898)
    at /home/kde4daily/src/kdebase/apps/dolphin/src/dolphincolumnwidget.cpp:411
#10 0xb7473d30 in DolphinColumnWidget::qt_metacall (this=0x85b9090, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfb63d3c)
    at /home/kde4daily/build/kdebase/apps/dolphin/src/dolphincolumnwidget.moc:69
#11 0xb7ed1517 in QMetaObject::activate ()
   from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#12 0xb7ed1999 in QMetaObject::activate ()
   from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#13 0xb6efaf70 in QAbstractItemView::entered ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#14 0xb6f02fd1 in QAbstractItemView::mouseMoveEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#15 0xb6f24593 in QListView::mouseMoveEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#16 0xb6a5bfad in QWidget::event ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#17 0xb6dca048 in QFrame::event ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#18 0xb6e6148d in QAbstractScrollArea::viewportEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#19 0xb6f04159 in QAbstractItemView::viewportEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#20 0xb6e63f7a in QAbstractScrollAreaPrivate::viewportEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#21 0xb6e63fac in QAbstractScrollAreaFilter::eventFilter ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#22 0xb7ebaa18 in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#23 0xb69fe7f7 in QApplicationPrivate::notify_helper ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#24 0xb69ff2f1 in QApplication::notify ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#25 0xb79dce37 in KApplication::notify (this=0xbfb64f7c, receiver=0x8511b40, 
    event=0xbfb64728)
    at /home/kde4daily/src/kdelibs/kdeui/kernel/kapplication.cpp:311
#26 0xb7ebc68a in QCoreApplication::notifyInternal ()
   from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#27 0xb6a0a669 in QCoreApplication::sendSpontaneousEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#28 0xb6a03166 in QApplicationPrivate::sendMouseEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#29 0xb6a7d221 in QETWidget::translateMouseEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#30 0xb6a7a8be in QApplication::x11ProcessEvent ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#31 0xb6aa6efd in x11EventSourceDispatch ()
   from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#32 0xb628bbf8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#33 0xb628ee5e in ?? () from /usr/lib/libglib-2.0.so.0
#34 0x080c2c58 in ?? ()
#35 0x00000000 in ?? ()
#0  0xb7f72402 in __kernel_vsyscall ()
Comment 1 FiNeX 2008-06-17 16:23:34 UTC
Crash confirmed, even with the scrollbar :-)

This is my backtrace:



Application: Dolphin (dolphin), signal SIGSEGV
 [?1034h[Thread debugging using libthread_db enabled]
[New Thread 0xb61716d0 (LWP 26874)]
[KCrash handler]
#6  0xb7eff749 in QEventLoop::exit (this=0x0, returnCode=0)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qeventloop.h:60
#7  0xb6b39b44 in QDragManager::eventFilter (this=0xa26e340, o=0xa0e3e40, 
    e=0xbfdbc73c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qdnd_x11.cpp:1295
#8  0xb7f00354 in QCoreApplicationPrivate::sendThroughApplicationEventFilters (
    this=0x9f39728, receiver=0xa0e3e40, event=0xbfdbc73c)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:676
#9  0xb6ac5553 in QApplicationPrivate::notify_helper (this=0x9f39728, 
    receiver=0xa0e3e40, e=0xbfdbc73c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3749
#10 0xb6accf55 in QApplication::notify (this=0xbfdbe194, receiver=0xa0e3e40, 
    e=0xbfdbc73c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3501
#11 0xb79f223d in KApplication::notify (this=0xbfdbe194, receiver=0xa0e3e40, 
    event=0xbfdbc73c)
    at /home/test/KDE4/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:311
#12 0xb7f010a1 in QCoreApplication::notifyInternal (this=0xbfdbe194, 
    receiver=0xa0e3e40, event=0xbfdbc73c)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:583
#13 0xb6acc253 in QApplicationPrivate::sendMouseEvent (receiver=0xa0e3e40, 
    event=0xbfdbc73c, alienWidget=0xa2f99d8, nativeWidget=0x9f65460, 
    buttonDown=0xb70ec6f0, lastMouseReceiver=@0xb70ec6f4)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:218
#14 0xb6b29e25 in QETWidget::translateMouseEvent (this=0x9f65460, 
    event=0xbfdbcc1c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication_x11.cpp:4198
#15 0xb6b292e5 in QApplication::x11ProcessEvent (this=0xbfdbe194, 
    event=0xbfdbcc1c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication_x11.cpp:3198
#16 0xb6b4eaec in x11EventSourceDispatch (s=0x9f3c308, callback=0, 
    user_data=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:148
#17 0xb6461f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#18 0xb64654eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#19 0xb6465668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#20 0xb7f27678 in QEventDispatcherGlib::processEvents (this=0x9f187f8, flags=
      {i = -1076113960})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:325
#21 0xb6b4e2a5 in QGuiEventDispatcherGlib::processEvents (this=0x9f187f8, 
    flags={i = -1076113912})
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#22 0xb7eff82a in QEventLoop::processEvents (this=0xa26a400, flags=
      {i = -1076113848})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#23 0xb7eff9ea in QEventLoop::exec (this=0xa26a400, flags={i = -1076113636})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#24 0xb6b36e79 in QDragManager::drag (this=0xa26e340, o=0xa308c08)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qdnd_x11.cpp:1941
#25 0xb6ad69da in QDrag::exec (this=0xa308c08, supportedActions=
      {i = -1076113412}, defaultDropAction=Qt::IgnoreAction)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qdrag.cpp:281
#26 0xb74459d2 in DragAndDropHelper::startDrag (itemView=0xa308588, 
    supportedActions={i = -1076113344})
    at /home/test/KDE4/kdesvn/kdebase/apps/dolphin/src/draganddrophelper.cpp:53
#27 0xb744263c in DolphinColumnWidget::startDrag (this=0xa308588, 
    supportedActions={i = -1076113116})
    at /home/test/KDE4/kdesvn/kdebase/apps/dolphin/src/dolphincolumnwidget.cpp:260
#28 0xb6f16c89 in QAbstractItemView::mouseMoveEvent (this=0xa308588, 
    event=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/itemviews/qabstractitemview.cpp:1505
#29 0xb6f2abf2 in QListView::mouseMoveEvent (this=0xa308588, e=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/itemviews/qlistview.cpp:797
#30 0xb6b16e40 in QWidget::event (this=0xa308588, event=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qwidget.cpp:6912
#31 0xb6df5463 in QFrame::event (this=0xa308588, e=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qframe.cpp:657
#32 0xb6e7ee0f in QAbstractScrollArea::viewportEvent (this=0xa308588, 
    e=0xbfdbc0f0)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qabstractscrollarea.cpp:941
#33 0xb6f17fcf in QAbstractItemView::viewportEvent (this=0xa308588, 
    event=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/itemviews/qabstractitemview.cpp:1426
#34 0xb6e811f5 in QAbstractScrollAreaFilter::eventFilter (this=0xa30a240, 
    o=0xa2f99d8, e=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qabstractscrollarea_p.h:102
#35 0xb7f002aa in QCoreApplicationPrivate::sendThroughObjectEventFilters (
    this=0x9f39728, receiver=0xa2f99d8, event=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:694
#36 0xb6ac55ba in QApplicationPrivate::notify_helper (this=0x9f39728, 
    receiver=0xa2f99d8, e=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3768
#37 0xb6accf55 in QApplication::notify (this=0xbfdbe194, receiver=0xa2f99d8, 
    e=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3501
#38 0xb79f223d in KApplication::notify (this=0xbfdbe194, receiver=0xa2f99d8, 
    event=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:311
#39 0xb7f010a1 in QCoreApplication::notifyInternal (this=0xbfdbe194, 
    receiver=0xa2f99d8, event=0xbfdbd9ec)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:583
#40 0xb6acc253 in QApplicationPrivate::sendMouseEvent (receiver=0xa2f99d8, 
    event=0xbfdbd9ec, alienWidget=0xa2f99d8, nativeWidget=0x9f65460, 
    buttonDown=0xb70ec6f0, lastMouseReceiver=@0xb70ec6f4)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:218
#41 0xb6b29e25 in QETWidget::translateMouseEvent (this=0x9f65460, 
    event=0xbfdbdecc)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication_x11.cpp:4198
#42 0xb6b292e5 in QApplication::x11ProcessEvent (this=0xbfdbe194, 
    event=0xbfdbdecc)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication_x11.cpp:3198
#43 0xb6b4eaec in x11EventSourceDispatch (s=0x9f3c308, callback=0, 
    user_data=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:148
#44 0xb6461f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#45 0xb64654eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#46 0xb6465668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#47 0xb7f27678 in QEventDispatcherGlib::processEvents (this=0x9f187f8, flags=
      {i = -1076109176})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:325
#48 0xb6b4e2a5 in QGuiEventDispatcherGlib::processEvents (this=0x9f187f8, 
    flags={i = -1076109128})
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#49 0xb7eff82a in QEventLoop::processEvents (this=0xbfdbe120, flags=
      {i = -1076109064})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#50 0xb7eff9ea in QEventLoop::exec (this=0xbfdbe120, flags={i = -1076109016})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#51 0xb7f01c4d in QCoreApplication::exec ()
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:845
#52 0xb6ac5457 in QApplication::exec ()
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3304
#53 0x08085edf in main (argc=1, argv=0xbfdbe344)
    at /home/test/KDE4/kdesvn/kdebase/apps/dolphin/src/main.cpp:94
#0  0xb7fa2424 in __kernel_vsyscall ()


Comment 2 Peter Penz 2008-06-17 21:40:12 UTC
*** Bug 164306 has been marked as a duplicate of this bug. ***
Comment 3 David Vogt 2008-07-16 10:14:56 UTC
And one more backtrace.. slightly different, but also in multicolumn mode..

Application: Dolphin (dolphin), signal SIGSEGV
KDE4Daily is generating a backtrace - please be patient :)
KDE41BRANCHr832707
------

[Thread debugging using libthread_db enabled]
[New Thread 0xb5fb2940 (LWP 6581)]
0xb7f90410 in __kernel_vsyscall ()

#1  0xb63b8c90 in nanosleep () from /lib/tls/i686/cmov/libc.so.6
#2  0xb63b8ac7 in sleep () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7a5710d in KCrash::startDrKonqi () from /home/kde4daily/install/kde/lib/libkdeui.so.5
#4  0xb7a57c50 in KCrash::defaultCrashHandler () from /home/kde4daily/install/kde/lib/libkdeui.so.5
#6  0x0853b968 in __ ()
#7  0xb7eebc94 in QObject::disconnect () from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#8  0xb747c03f in DolphinController::setItemView () from /home/kde4daily/install/kde/lib/libdolphinprivate.so.4
#9  0xb74872f8 in DolphinColumnWidget::slotEntered () from /home/kde4daily/install/kde/lib/libdolphinprivate.so.4
#10 0xb7487390 in DolphinColumnWidget::qt_metacall () from /home/kde4daily/install/kde/lib/libdolphinprivate.so.4
#11 0xb7eef517 in QMetaObject::activate () from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#12 0xb7eef999 in QMetaObject::activate () from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#13 0xb7120fac in QAbstractItemView::entered () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#14 0xb712900d in QAbstractItemView::mouseMoveEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#15 0xb714a5cf in QListView::mouseMoveEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#16 0xb6c81fad in QWidget::event () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#17 0xb6ff0048 in QFrame::event () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#18 0xb708749d in QAbstractScrollArea::viewportEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#19 0xb712a195 in QAbstractItemView::viewportEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#20 0xb7089f8a in QAbstractScrollAreaPrivate::viewportEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#21 0xb7089fbc in QAbstractScrollAreaFilter::eventFilter () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#22 0xb7ed8a18 in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#23 0xb6c247f7 in QApplicationPrivate::notify_helper () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#24 0xb6c252f1 in QApplication::notify () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#25 0xb79f03b5 in KApplication::notify () from /home/kde4daily/install/kde/lib/libkdeui.so.5
#26 0xb7eda68a in QCoreApplication::notifyInternal () from /home/kde4daily/install/qt-copy/lib/libQtCore.so.4
#27 0xb6c30669 in QCoreApplication::sendSpontaneousEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#28 0xb6c29166 in QApplicationPrivate::sendMouseEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#29 0xb6ca3221 in QETWidget::translateMouseEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#30 0xb6ca08be in QApplication::x11ProcessEvent () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#31 0xb6cccefd in x11EventSourceDispatch () from /home/kde4daily/install/qt-copy/lib/libQtGui.so.4
#32 0xb629abf8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#33 0xb629de5e in __ () from /usr/lib/libglib-2.0.so.0
#34 0x080c22c0 in __ ()
#35 0x00000000 in __ ()
Comment 4 Peter Penz 2008-07-21 22:14:05 UTC
*** Bug 166660 has been marked as a duplicate of this bug. ***
Comment 5 Peter Penz 2008-07-21 22:14:18 UTC
*** Bug 166211 has been marked as a duplicate of this bug. ***
Comment 6 Peter Penz 2008-07-21 22:15:16 UTC
*** Bug 167150 has been marked as a duplicate of this bug. ***
Comment 7 Peter Penz 2008-07-21 22:16:00 UTC
*** Bug 165347 has been marked as a duplicate of this bug. ***
Comment 8 Pedro Morgan 2008-07-21 23:30:03 UTC
Just happened again.. see once in 2 days.

Does not piss me off 2 much cos I can start again, click places link and off we go again ;-))) Love it;-)
<code>
Application: Dolphin (dolphin), signal SIGSEGV
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb5f9c720 (LWP 12489)]
[New Thread 0xb44fbb90 (LWP 12490)]
[KCrash handler]
#6  0xb76f77d9 in QObject::disconnect () from /usr/lib/libQtCore.so.4
#7  0xb7f66cd7 in DolphinController::setItemView ()
   from /usr/lib/kde4/lib/libdolphinprivate.so.4
#8  0xb7f717ac in ?? () from /usr/lib/kde4/lib/libdolphinprivate.so.4
#9  0xb7f7183b in ?? () from /usr/lib/kde4/lib/libdolphinprivate.so.4
#10 0xb76f64f9 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb76f6bc2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#12 0xb7122e43 in QAbstractItemView::entered () from /usr/lib/libQtGui.so.4
#13 0xb712c17b in QAbstractItemView::mouseMoveEvent ()
   from /usr/lib/libQtGui.so.4
#14 0xb7145402 in QListView::mouseMoveEvent () from /usr/lib/libQtGui.so.4
#15 0xb6cc16a1 in QWidget::event () from /usr/lib/libQtGui.so.4
#16 0xb6ff6063 in QFrame::event () from /usr/lib/libQtGui.so.4
#17 0xb7089c0f in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#18 0xb7132d38 in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#19 0xb708af95 in ?? () from /usr/lib/libQtGui.so.4
#20 0xb76e1a21 in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#21 0xb6c69be3 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#22 0xb6c6ecd5 in QApplication::notify () from /usr/lib/libQtGui.so.4
#23 0xb7b85603 in KApplication::notify (this=0xbf9f70ac, receiver=0x8239020, 
    event=0xbf9f68dc)
    at /build/buildd/kde4libs-4.0.98a/kdeui/kernel/kapplication.cpp:311
#24 0xb76e16a9 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#25 0xb6c6be21 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#26 0xb6cd5ccd in ?? () from /usr/lib/libQtGui.so.4
#27 0xb6cd46b1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#28 0xb6cfd3ba in ?? () from /usr/lib/libQtGui.so.4
#29 0xb6338bf8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb633be5e in ?? () from /usr/lib/libglib-2.0.so.0
#31 0xb633c3ac in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0xb770cf98 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#33 0xb6cfd1b5 in ?? () from /usr/lib/libQtGui.so.4
#34 0xb76e092d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#35 0xb76e0abd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#36 0xb76e2d3d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#37 0xb6c69567 in QApplication::exec () from /usr/lib/libQtGui.so.4
#38 0x08080749 in ?? ()
#39 0xb67dd450 in __libc_start_main () from /lib/tls/i686/cmov/libc.so.6
#40 0x080619e1 in _start ()
#0  0xb7fa9410 in __kernel_vsyscall ()
</code>
Comment 9 Pedro Morgan 2008-07-21 23:39:16 UTC
AHA.. figured something out, trying to test the first report up top. Using KDE4-1. kubuntu
==
Steps: 
a) multicolumn 
b) preview on 
c) rich directory structure 
d) navigation path (not edit)  <<<<<<<<<<< DING
e) open several columns (dirA->dirB->dirC...) 
f) close them by clicking in location dirA or dirB 
g) repeat e-f till crash
==
I cannot launch KATE-kde4 from dolphin, indeed anywhere.. ie "Open with .. >>">menu

So when I ask to open=launch a file with kate.. then navigate to other places.. Then a dBUS message should come back.. saying normallyu "No dBus Message or like"

Instead dolphin crashes.. Anyway.. How come I cant launch kate-kde4 from dolphin or anywhere. I Always get a debug message. Made some noise of that to no avail ;-)

Sniffing away ;-)...
Comment 10 Pedro Morgan 2008-07-21 23:48:30 UTC
I think its a dBus problem with reasoning.. 

On kde 4.1,  a right click in dolphin to open eg a ,php file in kate does not "launch" files from dolphn, It used to be an error message..such as "dbus= fubar".. dolphin did not crash.. kde-kate4 did..

Now however .. maybe and as soon a maybe dBUS timesout, having moved somewhere else it crashes. And I can almost replicate it whereby instead Kate-kde4 is on taskbar and hanging.. and dolphin has krashed..

Will report more.. as I auto discover
Comment 11 Peter Penz 2008-07-24 21:51:07 UTC
SVN commit 837486 by ppenz:

fix crash when opening a lot of columns and going back very fast by clicking on each breadcrumb of the URL navigator

BUG: 164304

 M  +13 -2     dolphincolumnview.cpp  
 M  +6 -0      dolphincolumnview.h  
 M  +5 -3      dolphincontroller.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=837486
Comment 12 Peter Penz 2008-07-24 21:51:37 UTC
SVN commit 837487 by ppenz:

Backport of 837486: fix crash when opening a lot of columns and going back very fast by clicking on each breadcrumb of the URL navigator

CCBUG: 164304

 M  +13 -2     dolphincolumnview.cpp  
 M  +6 -0      dolphincolumnview.h  
 M  +5 -3      dolphincontroller.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=837487