fix crash when opening a lot of columns and going back very fast by clicking on each breadcrumb of the URL navigator

BUG: 164304

svn path=/trunk/KDE/kdebase/apps/; revision=837486